--- a/src/package.json
+++ b/src/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "antlr4ts": "antlr4ts -visitor ./src/antlr4/python.g4"
   },
   "dependencies": {
+    "antlr4ts": "^0.5.0-alpha.4",
+    "antlr4ts-cli": "^0.5.0-alpha.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
