--- a/src/package.json
+++ b/src/package.json
@@ -11,9 +11,11 @@
     "antlr4ts": "antlr4ts -visitor ./src/antlr4/python.g4"
   },
   "dependencies": {
+    "@prisma/client": "6.1.0",
     "antlr4ts": "^0.5.0-alpha.4",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "next": "^15.1.3",
+    "prisma": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
