--- a/src/package.json
+++ b/src/package.json
@@ -15,12 +15,14 @@
     "antlr4ts": "^0.5.0-alpha.4",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "next": "^15.1.3",
+    "next-auth": "^4.24.11",
     "prisma": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "22.10.3",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "eslint": "^9.11.1",
