--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "antlr4ts": "antlr4ts -visitor ./src/antlr4/python.g4"
+    "antlr4ts": "antlr4ts -visitor ./src/antlr4/python.g4",
+    "format:check": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@prisma/client": "6.1.0",
@@ -16,6 +18,7 @@
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
+    "prettier": "^3.4.2",
     "prisma": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
