--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,15 +1,11 @@
 {
   "compilerOptions": {
-  "paths": {
+    "paths": {
       "@/*": ["./*"]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -38,7 +34,5 @@
     "./src",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "./node_modules"
-  ]
+  "exclude": ["./node_modules"]
 }
