--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
+    "lint": "next lint",
     "antlr4ts": "antlr4ts -visitor ./src/antlr4/python.g4",
     "format:check": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore ."
@@ -18,23 +18,20 @@
     "@prisma/client": "6.1.0",
     "antlr4ts": "^0.5.0-alpha.4",
     "antlr4ts-cli": "^0.5.0-alpha.4",
-    "next": "^15.1.3",
+    "next": "^15.1.6",
     "next-auth": "^4.24.11",
-    "prettier": "^3.4.2",
-    "prisma": "^6.1.0",
+    "prettier": "^3.5.0",
+    "prisma": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@types/node": "22.10.3",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.6",
+    "@eslint/eslintrc": "^3"
   }
 }
