--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -31,7 +31,7 @@
   "include": [
     "./dist/types/**/*.ts",
     "./next-env.d.ts",
-    "./src",
+    "./app",
     ".next/types/**/*.ts"
   ],
   "exclude": ["./node_modules"]
