--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "check-types": "tsc --noemit",
+    "lint": "npm run check-types && next lint",
     "antlr4ts": "antlr4ts -visitor ./src/antlr4/python.g4",
     "format:check": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore ."
@@ -26,12 +27,12 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5.7.3"
   }
 }
