--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -22,6 +22,7 @@
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
+    "types": ["jest", "node"],
     "plugins": [
       {
         "name": "next"
@@ -32,7 +33,8 @@
     "./dist/types/**/*.ts",
     "./next-env.d.ts",
     "./app",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "./__tests__/"
   ],
   "exclude": ["./node_modules"]
 }
