--- a/src/package.json
+++ b/src/package.json
@@ -23,14 +23,17 @@
     "@prisma/client": "6.1.0",
     "@tabler/icons-react": "^3.30.0",
     "@types/jest": "^29.5.14",
+    "@types/prismjs": "^1.26.5",
     "antlr4ts": "^0.5.0-alpha.4",
     "antlr4ts-cli": "^0.5.0-alpha.4",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "prettier": "^3.5.0",
     "prisma": "^6.3.1",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-simple-code-editor": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
