--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@mantine/core": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
+    "@mantine/notifications": "^7.17.2",
     "@prisma/client": "6.1.0",
     "@tabler/icons-react": "^3.30.0",
     "@types/jest": "^29.5.14",
@@ -34,7 +35,8 @@
     "pyodide": "0.23.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-simple-code-editor": "^0.14.1"
+    "react-simple-code-editor": "^0.14.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
