--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,6 @@ stages:
   - lint
   - test
 
-cache:
-  untracked: true
-  paths:
-    - src/node_modules/
-
 lint:
   stage: lint
   script:
@@ -23,4 +18,5 @@ test:
   script:
     - cd src
     - npm install -g bun@1.1.39
+    - bun install
     - bun run test
