--- a/src/package.json
+++ b/src/package.json
@@ -47,8 +47,8 @@
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
-    "eslint": "^9.20.0",
-    "eslint-config-next": "15.1.6",
+    "eslint": "8",
+    "eslint-config-next": "14",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
