--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,8 @@
     "format:check": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "pipeline": "bun run lint && bun run test"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
