--- a/src/package.json
+++ b/src/package.json
@@ -36,6 +36,7 @@
     "pyodide": "0.23.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-resizable-panels": "^2.1.7",
     "react-simple-code-editor": "^0.14.1",
     "uuid": "^11.1.0"
   },
