--- a/src/package.json
+++ b/src/package.json
@@ -22,8 +22,9 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
-    "@mantine/core": "^7.17.0",
-    "@mantine/hooks": "^7.17.0",
+    "@fontsource/nunito": "^5.2.5",
+    "@mantine/core": "^7.17.5",
+    "@mantine/hooks": "^7.17.5",
     "@mantine/notifications": "^7.17.2",
     "@prisma/client": "6.3.1",
     "@tabler/icons-react": "^3.30.0",
