--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "check-types": "tsc --noemit",
     "lint": "npm run check-types && next lint",
