--- a/src/package.json
+++ b/src/package.json
@@ -30,6 +30,7 @@
     "@tabler/icons-react": "^3.30.0",
     "@types/jest": "^29.5.14",
     "@types/prismjs": "^1.26.5",
+    "date-fns": "^4.1.0",
     "next": "14.0.0",
     "next-auth": "^4.24.11",
     "prettier": "^3.5.0",
